--- a/float-grid.css
+++ b/float-grid.css
@@ -7,6 +7,9 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
+	position:relative;
+	top: 150px;
+
 }
 
 .js-results-last3{
@@ -14,13 +17,16 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
-	
+	position:relative;
+	top: 150px;
 }
 
 .colOne, .colTwo{
 	float: left;
 	padding-left: 1.04166666%;
   padding-right: 1.04166666%;
+	
+	
 }
 
 .colOne{
@@ -45,6 +51,7 @@
 
 .js-results-last3::after {
   clear: both;
+	
 }
 
 .js-results-top3::after {
