--- a/main.css
+++ b/main.css
@@ -1,99 +1,177 @@
-* {
-  box-sizing: border-box;
-}
 
-body{
-	background: radial-gradient(ellipse at center, rgba(219,240,252,1) 0%,rgba(237, 231, 231, 0.98) 90%);
-	background-attachment: fixed;
-}
-
-.mainHeader{
-	height:150px;
-	width:100%;
-	box-shadow: 5px 5px 5px #888888;
-	background-color:rgba(57, 46, 92, 0.98);
-	position: absolute;
-	top: 0px;
-	right: 0;
-	left: 0; 
-	margin: 0 auto;
-}
-
-.websiteName{/* centering header text in div*/
-	position:relative;
-	top:40px;
-	right: 0;
-	left: 37%; 
-	margin: 0 auto;
-	font-size:100%;
-	font-size:2em;
-	font-family: 'Bangers', cursive;
-}
-
-.js-form{/* gives the the input and button space from the header text */
-	padding-top:1%;
-	position:relative;
-	top: 40px;
-}
-.js-input{/* gives size to text input*/
+	* {
+		box-sizing: border-box;
+	}
+	
+	body{
+		background: radial-gradient(ellipse at center, rgba(219,240,252,1) 0%,rgba(237, 231, 231, 0.98) 90%);
+		background-attachment: fixed;
+		height:100%;
+	}
+	.mainHeader{
+		height:150px;
+		width:100%;
+		box-shadow: 5px 5px 5px #888888;
+		background-color:rgba(57, 46, 92, 0.98);
+		position: absolute;
+		top: 0px;
+		right: 0;
+		left: 0; 
+		margin: 0 auto;
+	}
+	
+	.websiteName{/* centering header text in div*/
+		position:absolute;
+		top:10%;
+		right: 0;
+		left: 20%; 
+		margin: 0 auto;
+		font-size:1.5em;
+		font-family: 'Bangers', cursive;
+		z-index:1;
+	}
+	
+	.js-form{/* gives the the input and button space from the header text */
+		padding-top:1%;
+		position:relative;
+		top: 40px;
+	}
+	.js-input{/* gives size to text input*/
 	width:45%;
-	height:40px;
 	position:absolute;
+	left: 15%; 
+	top:20px;
+	border-radius:5%;
+	font-size:.975em;
+	height:40px;
+	box-shadow: 2px 2px 2px #888888;
+	font-family: 'Bangers', cursive;
+
+	}
+	
+	.js-button{/* spaces the button from the input text*/
+		position:absolute;
+		top:20px ;
+		left: 62%; 
+		border-radius:5%;
+		height:40px;
+		font-size:100%;
+		box-shadow: 2px 2px 2px #888888;
+		width:;
+	}
+	
+	#dropDownMenu{
+		z-index:1;
+		position:absolute;
+		top:20px;
+		left: 76%; 
+		border-radius:5%;
+		height:40px;
+		font-size:.975em;
+		box-shadow: 2px 2px 2px #888888;
+		font-family: 'Bangers', cursive;
+		padding-right:.5%;
+	}
+	
+	.results{
+		box-shadow: 10px 10px 5px #888888;
+	}
+	
+	.topThree,.lastThree{
+		position:absolute;
+		left:35%;
+		font-size:40px;
+		font-family: 'Bangers', cursive;
+	}
+	
+	.js-results-top3{
+		padding-bottom:40px;
+	}
+	.js-results-last3{
+		padding-bottom:40px;
+	}
+	
+	.streamerName{
+		font-size:1.5em;
+		font-family: 'Bangers', cursive;
+	}
+@media only screen and (min-width: 800px) {	
+
+	.js-input{/* gives size to text input*/
+	width:45%;
+	position:absolute;
+	top:100%;
 	left: 22%; 
 	border-radius:5%;
-	font-size:35px;
+	font-size:2em;
 	height:40px;
 	box-shadow: 2px 2px 2px #888888;
 	font-family: 'Bangers', cursive;
 
-}
-.js-button{/* spaces the button from the input text*/
-	position:absolute;
-	top: 100%;
-	left: 68%; 
-	border-radius:5%;
-	height:40px;
-	font-size:100%;
-	box-shadow: 2px 2px 2px #888888;
-}
+	}
+	
+	.websiteName{/* centering header text in div*/
+		position:absolute;
+		top:10%;
+		right: 0;
+		left: 37%; 
+		margin: 0 auto;
+		font-size:2em;
+		font-family: 'Bangers', cursive;
+		z-index:1;
+	}
 
-.results{
-	box-shadow: 10px 10px 5px #888888;
-}
-#dropDownMenu{
-	z-index:1;
-	position:absolute;
-	top:100%;
-	left: 75%; 
-	border-radius:5%;
-	height:40px;
-	font-size:1.5em;
-	box-shadow: 2px 2px 2px #888888;
-	font-family: 'Bangers', cursive;
-	padding-right:.5%;
-}
-.topThree,.lastThree{
-	position:absolute;
-	left:-30%;
-	font-size:40px;
-	font-family: 'Bangers', cursive;
-}
+	.js-button{/* spaces the button from the input text*/
+		position:absolute;
+		top: 100%;
+		left: 68%; 
+		border-radius:5%;
+		height:40px;
+		font-size:100%;
+		box-shadow: 2px 2px 2px #888888;
+		width:;
+	}
 
-.lastThree{
-	top:15%;
-}
-.topThree{
-	top:10%;
-}
-.streamerName{
-	font-size:1.5em;
-	font-family: 'Bangers', cursive;
-}
-.footer{
-	position:absolute;
-	top:100%;
-	left:45%;
-	z-index:1;
-	font-size:80%;
-	font-family: 'Bangers', cursive;
+	#dropDownMenu{
+		z-index:1;
+		position:absolute;
+		top:100%;
+		left: 75%; 
+		border-radius:5%;
+		height:40px;
+		font-size:1.5em;
+		box-shadow: 2px 2px 2px #888888;
+		font-family: 'Bangers', cursive;
+		padding-right:.5%;
+	}
+	
+	.footer{
+		position:absolute;
+		bottom: 0%;
+		left:45%;
+		z-index:1;
+		font-size:70%;
+		font-family: 'Bangers', cursive;
+	}
+	
+	.container{
+	min-height: 100%;
+	margin-bottom:-20px; 
+	}
+	.topThree,.lastThree{
+		position:absolute;
+		left:-30%;
+		font-size:40px;
+		font-family: 'Bangers', cursive;
+	}
+	.lastThree{
+		top:15%;
+	}
+	.topThree{
+		top:10%;
+	}
+	
+	.js-results-top3{
+		padding-bottom:0px;
+	}
 }
