--- a/main.css
+++ b/main.css
@@ -30,6 +30,13 @@
 		font-family: 'Bangers', cursive;
 		z-index:1;
 	}
+	span.websiteName:hover{
+		font-size:2.075em;
+	}
+
+	p.streamerName:hover{
+		font-size:1.75em
+	}
 	
 	.js-form{/* gives the the input and button space from the header text */
 		padding-top:1%;
@@ -77,7 +84,7 @@
 		box-shadow: 10px 10px 5px #888888;
 	}
 	
-	.topThree,.lastThree{
+	.topThree,.lastThree,.randomThree{
 		position:absolute;
 		left:35%;
 		font-size:40px;
@@ -85,10 +92,14 @@
 	}
 	
 	.js-results-top3{
-		padding-bottom:40px;
+		padding-bottom:30px;
 	}
 	.js-results-last3{
-		padding-bottom:40px;
+		padding-bottom:30px;
+	}
+	
+	.js-results-random{
+		padding-bottom:30px;
 	}
 	
 	.streamerName{
@@ -119,6 +130,10 @@
 		font-size:2em;
 		font-family: 'Bangers', cursive;
 		z-index:1;
+		
+	}
+	.websiteName:hover{
+		/*background-color:white;*/
 	}
 
 	.js-button{/* spaces the button from the input text*/
@@ -158,7 +173,7 @@
 	min-height: 100%;
 	margin-bottom:-20px; 
 	}
-	.topThree,.lastThree{
+	.topThree,.lastThree,.randomThree{
 		position:absolute;
 		left:-30%;
 		font-size:40px;
@@ -171,7 +186,28 @@
 		top:10%;
 	}
 	
-	.js-results-top3{
-		padding-bottom:0px;
+	.randomThree{
+		top:12.5%;
 	}
+	
+	.topLine, .middleLine{
+		position:absolute;
+		width:93.2%;
+		left:3.2%;
+		box-shadow: 0.2px 0.2px 0.5px #888888;
+		
+	}
+	.topLine{
+		top:100%;
+	}
+	.middleLine{
+		top:100%;
+	}
+	span.websiteName{
+		width:20%;
+	}
+	.websiteName{
+		position:relative;
+		top:35px;
+		left: 37%; 
 }
